[package]
name = "autobench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
serde = { version = "1.0.193", features = ["derive"] }
smallvec = { version = "1.11.1", features = [
  "serde",
  "const_generics",
  "union",
  "const_new",
] }

[dev-dependencies]
rand = "0.8.5"
vecmap-rs = "0.1.12"
